[package]
name = "rca9539"
description = "Abstraciton for PCA9539 I/O expander"
keywords = ["gpio", "PCA9539", "no_std", "expander", "ic"]
authors = ["PEGASUS GmbH <info@pegasus-aero.de>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pegasus-aero/rt-PCA9539"
readme = "README.md"
documentation = "https://docs.rs/pca9539"

[dependencies]
embedded-hal = "0.2.7"
nb = "1.0.0"
bitmaps = { version = "3.1.0", default-features = false }

[dev-dependencies]
mockall = "0.11.0"