[package]
name = "rca9539"
description = "Abstraciton for PCA9539 I/O expander"
keywords = ["gpio", "PCA9539", "no_std", "expander", "ic"]
authors = ["PEGASUS GmbH <info@pegasus-aero.de>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pegasus-aero/rt-PCA9539"
readme = "README.md"
documentation = "https://docs.rs/pca9539"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
bitmaps = { version = "3.1.0", default-features = false }
cortex-m = { version = "0.7.4", optional = true }
spin = { version = "0.9.2", optional = true }

[dev-dependencies]
mockall = "0.11.0"