[package]
name = "pca9539"
description = "Abstraciton for PCA9539 I/O expander"
keywords = ["gpio", "PCA9539", "no_std", "expander", "ic"]
categories  = ["embedded", "hardware-support", "no-std"]
authors = ["PEGASUS GmbH <info@pegasus-aero.de>"]
license = "MIT OR Apache-2.0"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/pegasus-aero/rt-PCA9539"
readme = "README.md"
documentation = "https://docs.rs/pca9539"

[dependencies]
embedded-hal = { version = "1.0.0" }
bitmaps = { version = "3.1.0", default-features = false }
cortex-m = { version = "0.7.4", optional = true }
spin = { version = "0.9.8", optional = true }
heapless = "0.8.0"

[dev-dependencies]
mockall = "0.11.0"

[features]
default = ["example"]
# Contains a dummy I2C bus for examples
example = []
# Fail on warnings
strict = []
